--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-refresh": "^0.8.3",
     "react-virtualized": "^9.22.3",
     "resolve": "1.18.1",
