update to "VAID"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kb4va.github.io/",
+  "homepage": "https://vis-vaid.github.io/",
   "name": "code",
   "version": "0.1.0",
   "private": true,
